--- a/src/app/genera-textos/genera-textos.component.html
+++ b/src/app/genera-textos/genera-textos.component.html
@@ -48,19 +48,20 @@
     </div>
 
     <div class="caja c5">
-      <button type="button"  mat-fab class="botonRotatorio" aria-label="Generar caracteres" (click)="onClickBotonGenerarTexto()"
+      <button type="button" mat-fab class="botonRotatorio" aria-label="Generar caracteres" (click)="onClickBotonGenerarTexto()"
         matTooltip="Pulsar para generar" matTooltipPosition="below">
         <mat-icon>refresh</mat-icon>
       </button>
 
-      <button type="button" *ngIf="textoGenerado" style="margin-left: 5px;"  mat-fab class="botonRotatorio" aria-label="Limpiar resultado" (click)="onClickLimpiarTexto()"
+      <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="textoGenerado"
+        style="margin-left: 5px;" aria-label="Limpiar resultado" (click)="onClickLimpiarTexto()"
         matTooltip="Pulsar para limpiar los caracteres" matTooltipPosition="below">
         <mat-icon>delete</mat-icon>
       </button>
     </div>
 
     <div class="caja c6">
-      <mat-form-field *ngIf="textoGenerado" style="margin-top: 10px;margin-left: 20px; width: 100%;">
+      <mat-form-field [@encogimientoAnimation] *ngIf="textoGenerado" style="margin-top: 10px;margin-left: 20px; width: 100%;">
         <mat-label>Texto generado</mat-label>
         <textarea matInput rows="6" (click)="onSelectDato(transformaTexto(textoGenerado))" readonly="true" value="{{textoGenerado | caseTransformer: tipoLetra}}">
         </textarea>
