--- a/src/app/genera-archivos/genera-archivos.component.html
+++ b/src/app/genera-archivos/genera-archivos.component.html
@@ -32,19 +32,20 @@
           <span *ngIf="codifica64Entrada && codifica64Entrada == 'archivo' && nombreArchivoBase64 != ''">{{nombreArchivoBase64}}</span>
 
           <div>
-            <button type="button"  mat-fab class="botonRotatorio" aria-label="Codificar base64" (click)="onClickBotonCodificarBase64()"
+            <button type="button" mat-fab class="botonRotatorio" aria-label="Codificar base64" (click)="onClickBotonCodificarBase64()"
               matTooltip="Pulsar para codificar" matTooltipPosition="below">
               <mat-icon>code</mat-icon>
             </button>
 
-            <button type="button" *ngIf="textoCodificadoBase64" style="margin-left: 5px;"  mat-fab class="botonRotatorio" aria-label="Limpiar resultado" (click)="onClickLimpiarBase64()"
+            <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="textoCodificadoBase64"
+              style="margin-left: 5px;" aria-label="Limpiar resultado" (click)="onClickLimpiarBase64()"
               matTooltip="Pulsar para limpiar codificado" matTooltipPosition="below">
               <mat-icon>delete</mat-icon>
             </button>
           </div>
 
           <div>
-            <mat-form-field *ngIf="textoCodificadoBase64" style="width: 100% !important; margin-top: 10px;margin-left: 5px;">
+            <mat-form-field [@entradaLateralAnimation] *ngIf="textoCodificadoBase64" style="width: 100% !important; margin-top: 10px;margin-left: 5px;">
               <mat-label>Codificado en Base 64</mat-label>
               <textarea matInput rows="6" (click)="onSelectDato(textoCodificadoBase64)" readonly="true" value="{{textoCodificadoBase64}}">
               </textarea>
@@ -76,19 +77,20 @@
           </mat-form-field>
 
           <div>
-            <button type="button"  mat-fab class="botonRotatorio" aria-label="Decodificar base64" (click)="onClickBotonDecodificarBase64()"
+            <button type="button" mat-fab class="botonRotatorio" aria-label="Decodificar base64" (click)="onClickBotonDecodificarBase64()"
               matTooltip="Pulsar para decodificar" matTooltipPosition="below">
               <mat-icon>code</mat-icon>
             </button>
 
-            <button type="button" *ngIf="textoDecodificadoBase64" style="margin-left: 5px;"  mat-fab class="botonRotatorio" aria-label="Limpiar resultado" (click)="onClickLimpiarDecoBase64()"
+            <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="textoDecodificadoBase64"
+              style="margin-left: 5px;" aria-label="Limpiar resultado" (click)="onClickLimpiarDecoBase64()"
               matTooltip="Pulsar para limpiar decodificado" matTooltipPosition="below">
               <mat-icon>delete</mat-icon>
             </button>
           </div>
 
           <div>
-            <mat-form-field *ngIf="textoDecodificadoBase64" style="width: 100% !important; margin-top: 10px;margin-left: 5px;">
+            <mat-form-field [@entradaLateralAnimation] *ngIf="textoDecodificadoBase64" style="width: 100% !important; margin-top: 10px;margin-left: 5px;">
               <mat-label>Texto decodificado</mat-label>
               <textarea matInput rows="6" (click)="onSelectDato(textoDecodificadoBase64)" readonly="true" value="{{textoDecodificadoBase64}}">
               </textarea>
@@ -119,19 +121,20 @@
           <span *ngIf="nombreArchivoHash != ''">{{nombreArchivoHash}}</span>
 
           <div>
-            <button type="button"  mat-fab class="botonRotatorio" aria-label="Obtener hash" (click)="onClickBotonHash()"
+            <button type="button" mat-fab class="botonRotatorio" aria-label="Obtener hash" (click)="onClickBotonHash()"
               matTooltip="Pulsar para obtener hash" matTooltipPosition="below">
               <mat-icon>code</mat-icon>
             </button>
 
-            <button type="button" *ngIf="textoHash" style="margin-left: 5px;"  mat-fab class="botonRotatorio" aria-label="Limpiar resultado" (click)="onClickLimpiarHash()"
+            <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="textoHash"
+              style="margin-left: 5px;" aria-label="Limpiar resultado" (click)="onClickLimpiarHash()"
               matTooltip="Pulsar para limpiar hash" matTooltipPosition="below">
               <mat-icon>delete</mat-icon>
             </button>
           </div>
 
           <div>
-            <button mat-flat-button *ngIf="textoHash" type="button" (click)="onSelectDato(textoHash)"
+            <button mat-flat-button [@entradaLateralAnimation] *ngIf="textoHash" type="button" (click)="onSelectDato(textoHash)"
               matTooltip="Pulsar para copiar" matTooltipPosition="below" style="margin-top: 10px;margin-left: 5px;">
               <span class="texto">{{textoHash}}</span>
             </button>
@@ -153,7 +156,7 @@
           <div>
             <button type="button"  mat-fab class="botonRotatorio" aria-label="Generar zip" (click)="onClickBotonZip()"
               matTooltip="Pulsar para generar zip" matTooltipPosition="below">
-              <mat-icon>refresh</mat-icon>
+              <mat-icon>download</mat-icon>
             </button>
           </div>
 
