--- a/src/app/genera-barras/genera-barras.component.html
+++ b/src/app/genera-barras/genera-barras.component.html
@@ -50,19 +50,20 @@
               <mat-icon matSuffix matTooltip="Texto a fijar en parte inferior. Opcional.">help</mat-icon>
             </mat-form-field>
 
-            <button type="button"  mat-fab class="botonRotatorio" style="margin-left: 5px;" aria-label="Generar código" (click)="onClickBotonGenerarQr()"
+            <button type="button" mat-fab class="botonRotatorio" style="margin-left: 5px;" aria-label="Generar código" (click)="onClickBotonGenerarQr()"
               matTooltip="Pulsar para generar" matTooltipPosition="below">
               <mat-icon>refresh</mat-icon>
             </button>
 
-            <button type="button" *ngIf="imagenQr != ''" style="margin-left: 5px;"  mat-fab class="botonRotatorio" aria-label="Limpiar resultado" (click)="onClickLimpiarQr()"
+            <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="imagenQr != ''"
+              style="margin-left: 5px;" aria-label="Limpiar resultado" (click)="onClickLimpiarQr()"
               matTooltip="Pulsar para limpiar código de barras" matTooltipPosition="below">
               <mat-icon>delete</mat-icon>
             </button>
           </div>
 
           <div>
-            <img *ngIf="imagenQr != ''" src="{{imagenQr}}" alt="código barras generado">
+            <img [@entradaLateralAnimation] *ngIf="imagenQr != ''" src="{{imagenQr}}" alt="código barras generado">
           </div>
 
 
@@ -89,13 +90,14 @@
             <mat-icon>refresh</mat-icon>
           </button>
 
-          <button type="button" *ngIf="imagenPdf147 != ''" style="margin-left: 5px;"  mat-fab class="botonRotatorio" aria-label="Limpiar resultado" (click)="onClickLimpiarPdf147()"
+          <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="imagenPdf147 != ''"
+            style="margin-left: 5px;" aria-label="Limpiar resultado" (click)="onClickLimpiarPdf147()"
             matTooltip="Pulsar para limpiar código de barras" matTooltipPosition="below">
             <mat-icon>delete</mat-icon>
           </button>
 
           <div>
-            <img *ngIf="imagenPdf147 != ''" src="{{imagenPdf147}}" alt="código barras generado">
+            <img [@entradaLateralAnimation] *ngIf="imagenPdf147 != ''" src="{{imagenPdf147}}" alt="código barras generado">
           </div>
 
 
@@ -119,18 +121,19 @@
             <mat-icon matSuffix matTooltip="Código numérico de 13 dígitos comenzado por '0'.">help</mat-icon>
           </mat-form-field>
 
-          <button type="button"  mat-fab class="botonRotatorio" style="margin-left: 5px;" aria-label="Generar código" (click)="onClickBotonGenerarEan()"
+          <button type="button" mat-fab class="botonRotatorio" style="margin-left: 5px;" aria-label="Generar código" (click)="onClickBotonGenerarEan()"
             matTooltip="Pulsar para generar" matTooltipPosition="below">
             <mat-icon>refresh</mat-icon>
           </button>
 
-          <button type="button" *ngIf="imagenEan != ''" style="margin-left: 5px;"  mat-fab class="botonRotatorio" aria-label="Limpiar resultado" (click)="onClickLimpiarEan()"
+          <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="imagenEan != ''"
+            style="margin-left: 5px;" aria-label="Limpiar resultado" (click)="onClickLimpiarEan()"
             matTooltip="Pulsar para limpiar código de barras" matTooltipPosition="below">
             <mat-icon>delete</mat-icon>
           </button>
 
           <div>
-            <img *ngIf="imagenEan != ''" src="{{imagenEan}}" alt="código barras generado">
+            <img [@entradaLateralAnimation] *ngIf="imagenEan != ''" src="{{imagenEan}}" alt="código barras generado">
           </div>
 
 
@@ -152,18 +155,19 @@
             <mat-icon matSuffix matTooltip="Código alfanúmerico de máximo 80 carácteres.">help</mat-icon>
           </mat-form-field>
 
-          <button type="button"  mat-fab class="botonRotatorio" style="margin-left: 5px;" aria-label="Generar código" (click)="onClickBotonGenerarCode128()"
+          <button type="button" mat-fab class="botonRotatorio" style="margin-left: 5px;" aria-label="Generar código" (click)="onClickBotonGenerarCode128()"
             matTooltip="Pulsar para generar" matTooltipPosition="below">
             <mat-icon>refresh</mat-icon>
           </button>
 
-          <button type="button" *ngIf="imagenCode128 != ''" style="margin-left: 5px;"  mat-fab class="botonRotatorio" aria-label="Limpiar resultado" (click)="onClickLimpiarCode128()"
+          <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="imagenCode128 != ''"
+            style="margin-left: 5px;" aria-label="Limpiar resultado" (click)="onClickLimpiarCode128()"
             matTooltip="Pulsar para limpiar código de barras" matTooltipPosition="below">
             <mat-icon>delete</mat-icon>
           </button>
 
           <div>
-            <img *ngIf="imagenCode128 != ''" src="{{imagenCode128}}" alt="código barras generado">
+            <img [@entradaLateralAnimation] *ngIf="imagenCode128 != ''" src="{{imagenCode128}}" alt="código barras generado">
           </div>
 
 
@@ -186,18 +190,19 @@
             <mat-icon matSuffix matTooltip="Código numérico de 12 dígitos. Puedes omitir el último que es el dígito de control, y lo generará por debajo.">help</mat-icon>
           </mat-form-field>
 
-          <button type="button"  mat-fab class="botonRotatorio" style="margin-left: 5px;" aria-label="Generar código" (click)="onClickBotonGenerarUpcA()"
+          <button type="button" mat-fab class="botonRotatorio" style="margin-left: 5px;" aria-label="Generar código" (click)="onClickBotonGenerarUpcA()"
             matTooltip="Pulsar para generar" matTooltipPosition="below">
             <mat-icon>refresh</mat-icon>
           </button>
 
-          <button type="button" *ngIf="imagenUpcA != ''" style="margin-left: 5px;"  mat-fab class="botonRotatorio" aria-label="Limpiar resultado" (click)="onClickLimpiarUpcA()"
+          <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="imagenUpcA != ''"
+            style="margin-left: 5px;" aria-label="Limpiar resultado" (click)="onClickLimpiarUpcA()"
             matTooltip="Pulsar para limpiar código de barras" matTooltipPosition="below">
             <mat-icon>delete</mat-icon>
           </button>
 
           <div>
-            <img *ngIf="imagenUpcA != ''" src="{{imagenUpcA}}" alt="código barras generado">
+            <img [@entradaLateralAnimation] *ngIf="imagenUpcA != ''" src="{{imagenUpcA}}" alt="código barras generado">
           </div>
 
 
@@ -218,18 +223,19 @@
             <mat-icon matSuffix matTooltip="Código numérico de 8 dígitos.">help</mat-icon>
           </mat-form-field>
 
-          <button type="button"  mat-fab class="botonRotatorio" style="margin-left: 5px;" aria-label="Generar código" (click)="onClickBotonGenerarUpcE()"
+          <button type="button" mat-fab class="botonRotatorio" style="margin-left: 5px;" aria-label="Generar código" (click)="onClickBotonGenerarUpcE()"
             matTooltip="Pulsar para generar" matTooltipPosition="below">
             <mat-icon>refresh</mat-icon>
           </button>
 
-          <button type="button" *ngIf="imagenUpcE != ''" style="margin-left: 5px;"  mat-fab class="botonRotatorio" aria-label="Limpiar resultado" (click)="onClickLimpiarUpcE()"
+          <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="imagenUpcE != ''"
+            style="margin-left: 5px;" aria-label="Limpiar resultado" (click)="onClickLimpiarUpcE()"
             matTooltip="Pulsar para limpiar código de barras" matTooltipPosition="below">
             <mat-icon>delete</mat-icon>
           </button>
 
           <div>
-            <img *ngIf="imagenUpcE != ''" src="{{imagenUpcE}}" alt="código barras generado">
+            <img [@entradaLateralAnimation] *ngIf="imagenUpcE != ''" src="{{imagenUpcE}}" alt="código barras generado">
           </div>
 
 
