--- a/src/app/genera-documentos/genera-documentos.component.html
+++ b/src/app/genera-documentos/genera-documentos.component.html
@@ -19,15 +19,17 @@
             matTooltip="Pulsar para generar" matTooltipPosition="below">
             <mat-icon>refresh</mat-icon>
           </button>
-          <button type="button" *ngIf="listaNifs?.length && listaNifs.length > 0" style="margin-left: 5px;"  mat-fab class="botonRotatorio" aria-label="Limpiar lista NIFs" (click)="onClickLimpiarListaNif()"
+          <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="listaNifs?.length && listaNifs.length > 0"
+            style="margin-left: 5px;" aria-label="Limpiar lista NIFs" (click)="onClickLimpiarListaNif()"
             matTooltip="Pulsar para limpiar la lista de NIFs" matTooltipPosition="below">
             <mat-icon>delete</mat-icon>
           </button>
-          <button type="button" *ngIf="listaNifs?.length && listaNifs.length > 0" style="margin-left: 5px;" mat-fab class="botonRotatorio" aria-label="Exportar a Excel" (click)="exportJsonNifs()"
+          <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="listaNifs?.length && listaNifs.length > 0"
+            style="margin-left: 5px;" aria-label="Exportar a Excel" (click)="exportJsonNifs()"
             matTooltip="Pulsar para exportar excel" matTooltipPosition="below">
             <mat-icon>description</mat-icon>
           </button>
-          <mat-list>
+          <mat-list [@entradaLateralAnimation] *ngIf="listaNifs?.length && listaNifs.length > 0">
             @for (nif of listaNifs; track nif) {
               <mat-list-item>
                 <div style="margin-top: 2%; margin-bottom: 2%;">
@@ -47,19 +49,21 @@
       <mat-card appearance="outlined">
         <mat-card-header>Generar NIEs</mat-card-header>
         <mat-card-content>
-          <button type="button"  mat-fab class="botonRotatorio" aria-label="Generar una lista de NIEs" (click)="onClickBotonGenerarListaNie()"
+          <button type="button" mat-fab class="botonRotatorio" aria-label="Generar una lista de NIEs" (click)="onClickBotonGenerarListaNie()"
             matTooltip="Pulsar para generar" matTooltipPosition="below">
             <mat-icon>refresh</mat-icon>
           </button>
-          <button type="button" *ngIf="listaNies?.length && listaNies.length > 0" style="margin-left: 5px;"  mat-fab class="botonRotatorio" aria-label="Limpiar lista NIEs" (click)="onClickLimpiarListaNie()"
+          <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="listaNies?.length && listaNies.length > 0"
+            style="margin-left: 5px;" aria-label="Limpiar lista NIEs" (click)="onClickLimpiarListaNie()"
             matTooltip="Pulsar para limpiar la lista de NIEs" matTooltipPosition="below">
             <mat-icon>delete</mat-icon>
           </button>
-          <button type="button" *ngIf="listaNies?.length && listaNies.length > 0" style="margin-left: 5px;" mat-fab class="botonRotatorio" aria-label="Exportar a Excel" (click)="exportJsonNies()"
+          <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="listaNies?.length && listaNies.length > 0"
+            style="margin-left: 5px;" aria-label="Exportar a Excel" (click)="exportJsonNies()"
             matTooltip="Pulsar para exportar excel" matTooltipPosition="below">
             <mat-icon>description</mat-icon>
           </button>
-          <mat-list>
+          <mat-list [@entradaLateralAnimation] *ngIf="listaNies?.length && listaNies.length > 0">
             @for (nie of listaNies; track nie) {
               <mat-list-item>
                 <div style="margin-top: 2%; margin-bottom: 2%;">
@@ -79,19 +83,21 @@
       <mat-card appearance="outlined">
         <mat-card-header>Generar Pasaportes</mat-card-header>
         <mat-card-content>
-          <button type="button"  mat-fab class="botonRotatorio" aria-label="Generar una lista de Pasaportes" (click)="onClickBotonGenerarListaPasaporte()"
+          <button type="button" mat-fab class="botonRotatorio" aria-label="Generar una lista de Pasaportes" (click)="onClickBotonGenerarListaPasaporte()"
             matTooltip="Pulsar para generar" matTooltipPosition="below">
             <mat-icon>refresh</mat-icon>
           </button>
-          <button type="button" *ngIf="listaPasaportes?.length && listaPasaportes.length > 0" style="margin-left: 5px;"  mat-fab class="botonRotatorio" aria-label="Limpiar lista Pasaportes" (click)="onClickLimpiarListaPasaporte()"
+          <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="listaPasaportes?.length && listaPasaportes.length > 0"
+            style="margin-left: 5px;" aria-label="Limpiar lista Pasaportes" (click)="onClickLimpiarListaPasaporte()"
             matTooltip="Pulsar para limpiar la lista de Pasaportes" matTooltipPosition="below">
             <mat-icon>delete</mat-icon>
           </button>
-          <button type="button" *ngIf="listaPasaportes?.length && listaPasaportes.length > 0" style="margin-left: 5px;" mat-fab class="botonRotatorio" aria-label="Exportar a Excel" (click)="exportJsonPasaporte()"
+          <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="listaPasaportes?.length && listaPasaportes.length > 0"
+            style="margin-left: 5px;" aria-label="Exportar a Excel" (click)="exportJsonPasaporte()"
             matTooltip="Pulsar para exportar excel" matTooltipPosition="below">
             <mat-icon>description</mat-icon>
           </button>
-          <mat-list>
+          <mat-list [@entradaLateralAnimation] *ngIf="listaPasaportes?.length && listaPasaportes.length > 0">
             @for (pasaporte of listaPasaportes; track pasaporte) {
               <mat-list-item>
                 <div style="margin-top: 2%; margin-bottom: 2%;">
@@ -123,15 +129,17 @@
             matTooltip="Pulsar para generar" matTooltipPosition="below">
             <mat-icon>refresh</mat-icon>
           </button>
-          <button type="button" *ngIf="listaCifs?.length && listaCifs.length > 0" style="margin-left: 5px;"  mat-fab class="botonRotatorio" aria-label="Limpiar lista CIFs" (click)="onClickLimpiarListaCif()"
+          <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="listaCifs?.length && listaCifs.length > 0"
+            style="margin-left: 5px;" aria-label="Limpiar lista CIFs" (click)="onClickLimpiarListaCif()"
             matTooltip="Pulsar para limpiar la lista de CIFs" matTooltipPosition="below">
             <mat-icon>delete</mat-icon>
           </button>
-          <button type="button" *ngIf="listaCifs?.length && listaCifs.length > 0" style="margin-left: 5px;" mat-fab class="botonRotatorio" aria-label="Exportar a Excel" (click)="exportJsonCifs()"
+          <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="listaCifs?.length && listaCifs.length > 0"
+            style="margin-left: 5px;" aria-label="Exportar a Excel" (click)="exportJsonCifs()"
             matTooltip="Pulsar para exportar excel" matTooltipPosition="below">
             <mat-icon>description</mat-icon>
           </button>
-          <mat-list>
+          <mat-list [@entradaLateralAnimation] *ngIf="listaCifs?.length && listaCifs.length > 0">
             @for (cif of listaCifs; track cif) {
               <mat-list-item>
                 <div style="margin-top: 2%; margin-bottom: 2%;">
@@ -162,18 +170,14 @@
               <mat-icon>search_check</mat-icon>
             </button>
             <div style="margin-left: 5px;">
-              <div *ngIf="nifValidarOk == 'OK'">
-                <button type="button" class="btn-success"
-                  matTooltip="Si" matTooltipPosition="below" (click)="onSelectDato('Si')">
-                  <mat-icon>done_all</mat-icon>
-                </button>
-              </div>
-              <div *ngIf="nifValidarOk == 'ERROR'">
-                <button type="button" class="btn-danger"
-                  matTooltip="No" matTooltipPosition="below" (click)="onSelectDato('No')">
-                  <mat-icon>close</mat-icon>
-                </button>
-              </div>
+              <button type="button" class="btn-success" [@encogimientoAnimation] *ngIf="nifValidarOk == 'OK'"
+                matTooltip="Si" matTooltipPosition="below" (click)="onSelectDato('Si')">
+                <mat-icon>done_all</mat-icon>
+              </button>
+              <button type="button" class="btn-danger" [@encogimientoAnimation] *ngIf="nifValidarOk == 'ERROR'"
+                matTooltip="No" matTooltipPosition="below" (click)="onSelectDato('No')">
+                <mat-icon>close</mat-icon>
+              </button>
             </div>
           </div>
         </mat-card-content>
@@ -194,18 +198,14 @@
               <mat-icon>search_check</mat-icon>
             </button>
             <div style="margin-left: 5px;">
-              <div *ngIf="nieValidarOk == 'OK'">
-                <button type="button" class="btn-success"
-                  matTooltip="Si" matTooltipPosition="below" (click)="onSelectDato('Si')">
-                  <mat-icon>done_all</mat-icon>
-                </button>
-              </div>
-              <div *ngIf="nieValidarOk == 'ERROR'">
-                <button type="button" class="btn-danger"
-                  matTooltip="No" matTooltipPosition="below" (click)="onSelectDato('No')">
-                  <mat-icon>close</mat-icon>
-                </button>
-              </div>
+              <button type="button" class="btn-success" [@encogimientoAnimation] *ngIf="nieValidarOk == 'OK'"
+                matTooltip="Si" matTooltipPosition="below" (click)="onSelectDato('Si')">
+                <mat-icon>done_all</mat-icon>
+              </button>
+              <button type="button" class="btn-danger" [@encogimientoAnimation] *ngIf="nieValidarOk == 'ERROR'"
+                matTooltip="No" matTooltipPosition="below" (click)="onSelectDato('No')">
+                <mat-icon>close</mat-icon>
+              </button>
             </div>
           </div>
         </mat-card-content>
@@ -226,18 +226,14 @@
               <mat-icon>search_check</mat-icon>
             </button>
             <div style="margin-left: 5px;">
-              <div *ngIf="cifValidarOk == 'OK'">
-                <button type="button" class="btn-success"
-                  matTooltip="Si" matTooltipPosition="below" (click)="onSelectDato('Si')">
-                  <mat-icon>done_all</mat-icon>
-                </button>
-              </div>
-              <div *ngIf="cifValidarOk == 'ERROR'">
-                <button type="button" class="btn-danger"
-                  matTooltip="No" matTooltipPosition="below" (click)="onSelectDato('No')">
-                  <mat-icon>close</mat-icon>
-                </button>
-              </div>
+              <button type="button" class="btn-success" [@encogimientoAnimation] *ngIf="cifValidarOk == 'OK'"
+                matTooltip="Si" matTooltipPosition="below" (click)="onSelectDato('Si')">
+                <mat-icon>done_all</mat-icon>
+              </button>
+              <button type="button" class="btn-danger" [@encogimientoAnimation] *ngIf="cifValidarOk == 'ERROR'"
+                matTooltip="No" matTooltipPosition="below" (click)="onSelectDato('No')">
+                <mat-icon>close</mat-icon>
+              </button>
             </div>
           </div>
         </mat-card-content>
@@ -260,18 +256,14 @@
               <mat-icon>search_check</mat-icon>
             </button>
             <div style="margin-left: 5px;">
-              <div *ngIf="pasaporteValidarOk == 'OK'">
-                <button type="button" class="btn-success"
-                  matTooltip="Si" matTooltipPosition="below" (click)="onSelectDato('Si')">
-                  <mat-icon>done_all</mat-icon>
-                </button>
-              </div>
-              <div *ngIf="pasaporteValidarOk == 'ERROR'">
-                <button type="button" class="btn-danger"
-                  matTooltip="No" matTooltipPosition="below" (click)="onSelectDato('No')">
-                  <mat-icon>close</mat-icon>
-                </button>
-              </div>
+              <button type="button" class="btn-success" [@encogimientoAnimation] *ngIf="pasaporteValidarOk == 'OK'"
+                matTooltip="Si" matTooltipPosition="below" (click)="onSelectDato('Si')">
+                <mat-icon>done_all</mat-icon>
+              </button>
+              <button type="button" class="btn-danger" [@encogimientoAnimation] *ngIf="pasaporteValidarOk == 'ERROR'"
+                matTooltip="No" matTooltipPosition="below" (click)="onSelectDato('No')">
+                <mat-icon>close</mat-icon>
+              </button>
             </div>
           </div>
         </mat-card-content>
@@ -293,7 +285,7 @@
               matTooltip="Pulsar para validar" matTooltipPosition="below" style="margin-left: 5px;">
               <mat-icon>refresh</mat-icon>
             </button>
-            <div *ngIf="pasaporteCalcularDC && pasaporteCalcularDC != ''" style="margin-left: 5px;" >
+            <div [@entradaLateralAnimation] *ngIf="pasaporteCalcularDC && pasaporteCalcularDC != ''" style="margin-left: 5px;" >
               <button mat-flat-button type="button" (click)="onSelectDato(pasaporteCalcularDC)"
               matTooltip="Pulsar para copiar" matTooltipPosition="below" style="height: 55px;">
                 <span class="dc">{{pasaporteCalcularDC}}</span>
